Bug 1916306 handle infinite TimeUnit values in ToBase() r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D220852